# schema-automator

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  better_practices.py  cli.html  genindex.html  index.html  install.html  introduction.html  mixs_qd_bp.tsv  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: build-deploy-documentation.yaml  check-pull-request.yaml  doc_pages.yaml  pypi-publish.yml
_modules/: index.html
_sources/: cli.rst.txt  index.rst.txt  introduction.rst.txt
_sources/intro/: cli.rst.txt  index.rst.txt  install.rst.txt
docs/: cli.rst  conf.py  index.rst  install.rst  introduction.rst  tutorial.rst
docs/metamodels/: index.rst
inferred-models/: synbio.yaml
intro/: cli.html  index.html  install.html
linkml_model_enrichment/: bioportal-enum-annotation.py  get_felix_tsv.py  infer_model.py  infer_model_from_rdf.py  mixs_qd_bp.py  mixs_qd_bp_or_ols.py  webmap_enums.md  webmap_enums.py
linkml_model_enrichment/annotators/: curated_to_enums.py  ea2.py  enum_annotator.py  enums_to_curateable.py  jsonld_annotator.py  schema_annotator.py
linkml_model_enrichment/dosdp/: dosdp_linkml.yaml
linkml_model_enrichment/importers/: csv_import_engine.py  dosdp_import_engine.py  import_engine.py  infer_model_from_rdftab.py  json_instance_import_engine.py  jsonschema_import_engine.py  owl_import_engine.py  rdf_instance_import_engine.py
linkml_model_enrichment/utils/: enums_pvs_tsv.py  schemautils.py
local/: README.md
metamodels/: index.html
metamodels/cadsr/: AlternateName.html  AlternateNames.html  Begin_Date.html  Boolean.html  CDEPermissibleValue.html  CDE_Long_Name.html  CDE_Public_ID.html  CRDCDataElement.html  CRDCDataElements.html  CRDC_Definition.html  CRDC_Name.html  CRD_Domain.html  ClassificationScheme.html  ClassificationSchemeItem.html  ClassificationSchemeItems.html  ClassificationSchemes.html  Coding_Instruction.html  Concept.html  Concept_Code.html  Concepts.html  ConceptualDomain.html  Curie.html  DataElement.html  DataElementConcept.html  DataElementContainer.html  DataElementQuery.html  DataElementQueryResults.html  DataElementgetCRDCListGETResponse.html  DataElementpublicIdGETResponse.html  DataElementqueryConceptGETResponse.html  DataElementqueryContextGETResponse.html  DataElementqueryGETResponse.html  Date.html  DateOrDatetime.html  Datetime.html  Decimal.html  Deep_Link.html  Double.html  End_Date.html  Example.html  (+84 more)
metamodels/frictionless/: Any.html  Boolean.html  Constraints.html  Curie.html  Date.html  DateOrDatetime.html  Datetime.html  Decimal.html  Dialect.html  Double.html  Field.html  Float.html  ForeignKeys.html  FormatEnum.html  Integer.html  Jsonpath.html  Jsonpointer.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  Package.html  ProfileEnum.html  Reference.html  Resource.html  Schema.html  Sparqlpath.html  String.html  Time.html  TypeEnum.html  Uri.html  Uriorcurie.html  constraint_name.html  constraints.html  delimiter.html  description.html  dialect.html  doubleQuote.html  enum.html  fields.html  foreignKeys.html  (+20 more)
pre_poetry/: Makefile  enum_annotator.md  enum_annotator.py  environment.sh  ols_search_wrapper.py  requirements.txt  synbio_organism_mapped.yaml  test_combined_tsv_enum.py
schema-automator/importers/: dosdp_import_engine.py  json_instance_import_engine.py  rdf_instance_import_engine.py
schema-automator/utils/: enums_pvs_tsv.py
schema_automator/: __init__.py  cli.py
schema_automator/annotators/: __init__.py  enum_annotator.py  jsonld_annotator.py  llm_annotator.py  schema_annotator.py
schema_automator/dosdp/: __init__.py
schema_automator/enhancer/: general_enhancer.py
schema_automator/generalizers/: __init__.py  csv_data_generalizer.py  generalizer.py  json_instance_generalizer.py  pandas_generalizer.py  rdf_data_generalizer.py  toml_instance_generalizer.py
schema_automator/importers/: __init__.py  cadsr_import_engine.py  csv_import_engine.py  dbml_import_engine.py  dosdp_import_engine.py  eml_import_engine.py  fhir_codesystem_import_engine.py  frictionless_import_engine.py  import_engine.py  infer_model_from_rdftab.py  json_instance_import_engine.py  jsonschema_import_engine.py  kwalify_import_engine.py  owl_import_engine.py  rdf_instance_import_engine.py  rdfs_import_engine.py  shacl_import_engine.py  sql_import_engine.py  tabular_import_engine.py  xsd_import_engine.py
schema_automator/jsonschema/: __init__.py  jsonschema.py
schema_automator/metamodels/: cadsr.py  cadsr.yaml  frictionless.py  frictionless.yaml
schema_automator/utils/: __init__.py  instance_extractor.py  schema_extractor.py  schemautils.py
temp/: README.md
tests/: __init__.py  environment.py  test_combined_tsv_enum.py  test_convert_shacl.py  test_dosdp.py  test_fk_inference.py  test_from_json.py  test_from_jsonschema.py  test_from_owl.py  test_from_owl_schemaorg.py  test_from_rdf.py  test_from_robot_template.py  test_from_tsv.py  test_jsonld_annotator.py  test_schema_annotator.py  test_sparql_import.py
tests/resources/: BioMRLs-table.html  C2M2_datapackage.json  MPLEx.toml  NWT_wildfires_biophysical_2016.tsv  bio.obo  biopax-level3.db  biopax-level3.nt  biopax-level3.ofn  biopax-level3.owl  biopax3.yaml  biosamples.tsv  books.tsv  cadsr-cde-12137353.json  cadsr-cde-2179609.json  cadsr-cde-2721353.json  cadsr-cde-2724331.json  cadsr-cde-996.json  cadsr-swagger.json  data_to_import.tsv  envo.tsv  foaf_snippet.ttl  hpo-fhir.json  obo-pred-summary.tsv  omo-pred-summary.tsv  prov.ofn  reproschema.ofn  reproschema.ttl  sample.tsv  sbol.ofn  schemaorg-robot.ofn  shacl.ofn  shacl.owl  shacl_simple.ttl  so-mini.obo  synonymizer.yaml  test-anon-individual.ofn  test_shacl_simple.ttl  webmap_enums.tsv  zfa-pred-summary.tsv
tests/test_annotators/: test_bioportal_schema_annotator.py  test_lov_schema_annotator.py  test_schema_annotator.py  test_schema_enricher.py
tests/test_generalizers/: test_csv_data_generalizer.py  test_fk_inference.py  test_from_robot_template.py  (+3 more)
(+253 files in other folders)
