[tool.poetry]
name = "schema_automator"
version = "0.0.0"
description = "Infer models, enrich with meaning for terms including enum permissible values"
authors = ["Chris Mungall", "Mark Miller", "Sierra Moxon", "Harshad Hegde"]
license = "BSD 3-Clause"
readme = "README.md"

packages = [
    { include = "schema_automator" }
]

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.7.4"
mkdocs = ">=1.2.3"
pandas = ">=1.3.5"
python-dateutil = ">=2.8.2"
jsonpatch = ">=1.32"
quantulum3 = ">=0.7.9"
funowl = ">=0.2.3"
click-log = ">=0.4.0"
psycopg2-binary = "^2.9.2"
strsimpy = ">=0.2.1"
requests = ">=2.26.0"
oaklib = ">=0.5.25"
pandera = ">=0.12.0"
tomlkit = ">=0.11.4"
inflect = ">=6.0.0"
schemasheets = ">=0.1.24"
xmltodict = "^0.13.0"
click-default-group = "^1.2.4"
linkml-runtime = "^1.7.2"
duckdb = "^0.10.1"
duckdb-engine = "^0.11.2"


[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"
Sphinx = ">=4.4.0"
sphinx-pdj-theme = ">=0.2.1"
sphinx-click = ">=3.1.0"
sphinxcontrib-mermaid = ">=0.9.2"
myst-parser = "*"
jupyter = ">=1.0.0"
lxml = ">=4.9.1"

[tool.poetry.group.llm.dependencies]
llm = ">=0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
schemauto = "schema_automator.cli:main"
extract-schema = "schema_automator.utils.schema_extractor:cli"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-pdj-theme", "sphinxcontrib-mermaid"]
mariadb = ["mariadb"]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,*.lock,resources'
check-hidden = true
ignore-regex = '\bOGER\b'
ignore-words-list = 'sie'
