[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "schema_automator"
description = "Infer models, enrich with meaning for terms including enum permissible values"
authors = [
    {name = "Chris Mungall"},
    {name = "Mark Miller"},
    {name = "Sierra Moxon"},
    {name = "Harshad Hegde"},
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

keywords = ["schema", "linked data", "data modeling", "rdf", "owl"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "linkml >= 1.10.0, < 2",
    "pandas >= 1.3.5",
    "python-dateutil >= 2.8.2",
    "quantulum3 >= 0.7.9",
    "funowl >= 0.2.3",
    "click-log >= 0.4.0",
    "strsimpy >= 0.2.1",
    "requests >= 2.26.0",
    "oaklib >= 0.5.25",
    "pandera >= 0.12.0",
    "tomlkit >= 0.11.4",
    "inflect >= 6.0.0",
    "linkml-runtime >= 1.10.0, < 2",
    "click >= 8.1.7, < 9",
    "deprecated >= 1.2.15, < 2",
    "sqlalchemy >= 2.0.36, < 3",
    "rdflib >= 7.1.1, < 8",
    "jsonasobj2 >= 1.0.4, < 2",
    "lxml >= 5.3.0",
    "pydbml >= 1.1.2, < 2",
    "pyyaml >= 6.0.2, < 7",
    "setuptools < 82; python_version < '3.12'",
]

[project.optional-dependencies]
docs = ["Sphinx >= 4.4.0", "sphinx-pdj-theme >= 0.2.1", "sphinx-click >= 3.1.0", "sphinxcontrib-mermaid >= 0.9.2", "myst-parser"]
mariadb = ["mariadb >= 1.1.11, < 2"]
postgres = ["psycopg2-binary >= 2.9.2, < 3"]
duckdb = ["duckdb >= 0.10.1, < 2"]
llm = ["llm >= 0.21, < 1"]

[dependency-groups]
dev = [
    "pytest >= 7.1.1",
    "Sphinx >= 4.4.0",
    "sphinx-pdj-theme >= 0.2.1",
    "sphinx-click >= 3.1.0",
    "sphinxcontrib-mermaid >= 0.9.2",
    "myst-parser",
    "jupyter >= 1.0.0",
    "lxml-stubs >= 0.5.1, < 0.6",
    "deptry >= 0.23.0",
]

[project.scripts]
schemauto = "schema_automator.cli:main"
extract-schema = "schema_automator.utils.schema_extractor:cli"

[project.urls]
repository = "https://github.com/linkml/schema-automator/"
documentation = "https://linkml.io/schema-automator/"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["schema_automator"]

[tool.codespell]
skip = '.git,*.lock,resources'
check-hidden = true
ignore-regex = '\bOGER\b'
ignore-words-list = 'sie,assertIn'

[tool.deptry.per_rule_ignores]
DEP002 = ["psycopg2-binary", "duckdb", "mariadb", "Sphinx", "sphinx-pdj-theme", "sphinxcontrib-mermaid", "setuptools"]
